--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "puppeteer": "^24.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
