--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
-    "puppeteer": "^24.15.0"
+    "puppeteer": "^24.15.0",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
